--- a/src/pages/añadir-avistamiento/avistamiento-form.html
+++ b/src/pages/añadir-avistamiento/avistamiento-form.html
@@ -11,11 +11,14 @@
   <form [formGroup]="sightingFormGroup" (ngSubmit)="sightingForm()">
     <div formGroupName="sighting">
       <ion-item>
-        <ion-label name="place" for="place">
+ç        <ion-label name="place" for="place">
           <span class="input-label">Lugar</span>
         </ion-label>
-        <ion-input name="place" type="text" formControlName="place"></ion-input>
+        <ion-input id="place" name="place" type="text" formControlName="place"></ion-input>
       </ion-item>
+
+      <span *ngIf="!sightingFormGroup.get('sighting.place').valid && sightingFormGroup.get('sighting.place').touched" class="help-block">
+        <span *ngIf="sightingFormGroup.get('sighting.place').errors['pattern']" class="error help-block">First name is invalid.</span></span>
       <button ion-button full type="submit" id="addSighting-button" [disabled]="!locationReady">Añadir Avistamiento</button>
     </div>
   </form>
