--- a/src/pages/main-menu/main-menu.html
+++ b/src/pages/main-menu/main-menu.html
@@ -2,15 +2,15 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Main Menu
+      Menu Principal
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <button ion-button full type="button" id="list-aves-button" (click)="listaAves()">Lista de aves</button>
-  <button ion-button full type="button" id="anadir-ave-button" (click)="anadirAve()">Añadir ave</button>
-  <button ion-button full type="button" id="info-button" (click)="informacion()">Info</button>
-  <button ion-button full type="button" id="logout-button" (click)="logout()">Desconectar</button>
+  <button ion-button full class="button-dark" id="list-aves-button" (click)="listaAves()">Lista de aves</button>
+  <button ion-button full class="button-dark" type="button" id="anadir-ave-button" (click)="anadirAve()">Añadir ave</button>
+  <button ion-button full class="button-dark" type="button" id="info-button" (click)="informacion()">Info</button>
+  <button ion-button full class="button-dark" type="button" id="logout-button" (click)="logout()">Desconectar</button>
 </ion-content>
 
